# icl-diversity

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  EXPERIMENT_REPORT.md  HYPOTHESES_QWEN.md  README.md  efficency_plan.md  pyproject.toml
docs/: c_ainf_proposal.md  images_results.txt  tevet_redo_report.md
docs/historical/: MIGRATION_PLAN.md  PENDING_EXPERIMENTS.md
figures/dataset_confound/: confound_report.txt
figures/mode_count/: ak_curves_by_m.caption.md  ak_curves_overlay.caption.md  fit_params_vs_m.caption.md  metrics_vs_m.caption.md  sigmoid_fits.caption.md
figures/mode_count_temperature/: h1_variance_reduction.json  h2_ordering_preservation.json  (+4 more)
hypotheses/: mode_count_hypotheses.md  tevet_results_gpt2.md  tevet_validation.md
paper/: in_context_diversity_metric.aux  in_context_diversity_metric.fdb_latexmk  in_context_diversity_metric.fls  in_context_diversity_metric.out  in_context_diversity_metric.tex  k0_derivation.aux  k0_derivation.fdb_latexmk  k0_derivation.fls  k0_derivation.tex
reports/: EXPERIMENT_REPORT_V2.md  MODE_COUNT_EXPERIMENT.md  MODE_COUNT_QWEN2.5-3B.md
results/: scenario_metrics.json  scenario_metrics_qwen2.5-32b.json  scenario_metrics_v2_100perm.json  scenario_metrics_v2_3perm.json  scenario_metrics_v2_qwen_100perm.json  scenario_metrics_v2_qwen_3perm.json
scripts/: analyze_c_ainf.py  analyze_mode_count_temperature.py  analyze_per_byte.py  analyze_results.py  analyze_temperature.py  analyze_tevet_validation.py  check_ainf_vs_mode_count.py  compare_tinker_local.py  compute_icl_metrics_for_tevet.py  compute_tevet_baselines.py  dataset_confound_analysis.py  disagreement_analysis.py  estimate_tinker_cost.py  fit_ak_curves.py  inspect_tevet_results.py  interactive_scatter.py  plot_ak_curves.py  plot_mode_count_results.py  plot_permutation_curves.py  plot_tevet_ak_curves.py  run_mode_count_experiment.py  run_mode_count_temperature.py  run_scenarios.py  run_temperature_experiments.py  test_hypotheses.py  verify_completion_masking.py
tests/: test_api_model.py  test_batching_and_ensemble.py  test_icl_diversity.py  test_icl_diversity_scenarios.py  test_mode_count_scenarios.py  test_parallel_samples.py  test_single_pass.py  test_tinker_live.py  test_tinker_model.py
wandb/: latest-run
(+245 files in other folders)
