[project]
name = "icl-diversity"
version = "0.1.0"
description = "ICL diversity metric: measures LLM output diversity via progressive conditional surprise"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "transformers>=4.30",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "scipy>=1.10",
]

[project.scripts]
calculate-icl-diversity = "icl_diversity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icl_diversity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
