[project]
name = "icl-diversity"
version = "0.1.0"
description = "ICL diversity metric: measures LLM output diversity via progressive conditional surprise"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "torch>=2.0",
    "transformers>=4.30",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "scipy>=1.10",
]
dev = [
    "dash>=4.1.0",
    "plotly>=6.6.0",
]

[project.scripts]
calculate-icl-diversity = "icl_diversity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icl_diversity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
